@@ -1,3 +1,6 @@
+Thu Dec 22 00:38:31 2007 - Andras Mantia <amantia@kde.org>
+    o fix the for loop parsing if end < start
+
 Thu Dec 20 00:38:31 2007 - Andras Mantia <amantia@kde.org>
     o insert the functions using the syntax of the new parser if #!kommander 
       is specified in the associated text 
